fix: improve loading text readability

--- a/index.css
+++ b/index.css
@@ -55,14 +55,22 @@ body {
     top: 0;
     height: 100vh;
     width: 100vw;
-    opacity: 0.5;
-    background: black;
     display: none;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     grid-gap: 1rem;
     z-index: 10;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.5;
+    background: black;
 }
 
 .loading-overlay .loading-spinner {
